# olp

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  release-metadata.env  report.md
apps/olp/: Cargo.toml
apps/olp/examples/: export_openapi.rs  sdk_smoke_fixture.rs
apps/olp/src/: catalog.rs  circuit.rs  cli.rs  connectors.rs  cookies.rs  event_completion.rs  gateway.rs  image_response.rs  json_media.rs  lib.rs  listener.rs  main.rs  management.rs  management_api.rs  media_spool.rs  mode_dependencies.rs  observability.rs  oidc.rs  openai_models.rs  openai_response.rs  operations.rs  playground.rs  problem.rs  provider_adapter.rs  proxy.rs  public_origin.rs  relative_url.rs  request_admission.rs  request_cookies.rs  router.rs  runtime.rs  semantic_validation.rs  services.rs  static_console.rs  streaming_response.rs  tests.rs  usage_tasks.rs  vendor_gateway.rs
apps/olp/src/catalog/: api_keys.rs  common.rs  models.rs  providers.rs  revisions.rs  routes.rs  tests.rs
apps/olp/src/cli/: commands.rs  config.rs  startup.rs  tests.rs  validation.rs
apps/olp/src/gateway/: anthropic.rs  chat.rs  endpoint_policy.rs  error.rs  execution.rs  failover.rs  gemini.rs  limits.rs  media.rs  media_jobs.rs  multipart.rs  native_models.rs  openai_chat_response.rs  openai_http.rs  openai_models.rs  protocol_error.rs  responses.rs  telemetry.rs  tests.rs  videos.rs
apps/olp/src/management/: api_keys.rs  auth.rs  common.rs  openapi.rs  providers.rs  routes.rs  team.rs  tests.rs
apps/olp/src/management_api/: access.rs  auth.rs  common.rs  configuration.rs  openapi.rs  tests.rs
apps/olp/src/oidc/: authorization.rs  (+8 more)
apps/olp/tests/: anthropic_gemini_inference.rs  catalog_http_postgres.rs  configuration_http_postgres.rs  identity_http_postgres.rs  media_jobs_http_postgres.rs  migration_preflight_postgres.rs  oidc_http_postgres.rs  openapi_drift.rs  operations_http_postgres.rs  vendor_inference.rs
crates/domain/: Cargo.toml
crates/domain/src/: auth.rs  canonical.rs  ids.rs  lib.rs  ports.rs  provider.rs  provider_configuration.rs  routing.rs
crates/domain/tests/: domain.rs  domain_codecs.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: client.rs  json_pointer.rs  lib.rs  sse.rs
crates/protocols/tests/: anthropic_messages.rs  codec_properties.rs  gemini_generate_content.rs  openai_chat.rs  openai_operations.rs  sse.rs
crates/providers/: BEDROCK.md  Cargo.toml
crates/providers/src/: connector_config.rs  factory.rs  forward_headers.rs  http_egress.rs  inline_media.rs  lib.rs  oidc.rs  provider_endpoint.rs  transport_io.rs  transport_support.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_initial.sql  0002_retention_jobs.sql  0003_identity_management.sql  0004_usage_retention_anchors.sql  0005_oidc.sql  0006_catalog_management.sql  0007_async_media_job_lifecycle.sql  0008_pricing_provider_overrides.sql  0009_capability_certification_integrity.sql  0010_usage_integrity.sql  0011_idempotency_replay.sql  0012_oidc_identity_lifecycle.sql  0013_runtime_fallback_integrity.sql  0014_async_media_reconciliation.sql  0015_provider_revisions.sql  0016_usage_consumer_health.sql  0017_public_auth_hardening.sql  0018_async_media_durability.sql  0019_usage_gap_hourly.sql  0020_usage_gateway_epochs.sql  0021_pricing_dimensions.sql  0022_runtime_publication_isolation.sql  0023_usage_event_receipts.sql  0024_oidc_completion_fence.sql  0025_source_aware_public_auth_rate_limits.sql  0026_oidc_login_flow_consumptions.sql  0027_route_routing_identities.sql  0028_anthropic_compatible_pricing.sql  0028_drop_usage_loss_reporter_state.sql  0028_naming_consistency.sql  0028_provider_model_lifecycle.sql  0029_oidc_link_session_binding.sql  0029_security_transitions.sql
crates/storage/scripts/: release_concurrency.lua  reserve_limits.lua
crates/storage/src/: access.rs  authentication.rs  catalog.rs  catalog_validation.rs  configuration.rs  identity.rs  lib.rs  limits.rs  maintenance.rs  media_jobs.rs  oidc.rs  operations.rs  reencryption.rs  request_metadata.rs  runtime_compiler.rs  security.rs  store.rs  team.rs  usage.rs  valkey.rs
crates/storage/tests/: catalog_postgres.rs  configuration_postgres.rs  idempotency_replay_postgres.rs  identity_postgres.rs  management_idempotency_replay_postgres.rs  master_key_reencryption_postgres.rs  media_jobs_postgres.rs  model_drift_postgres.rs  oidc_flow_postgres.rs  operations_postgres.rs  provider_revisions_postgres.rs  request_metadata_consumer_health_postgres.rs  request_metadata_naming_upgrade_postgres.rs  route_activation_revalidation_postgres.rs  route_draft_simulation_postgres.rs  runtime_fallback_postgres.rs  runtime_publication_postgres.rs  team_postgres.rs  upgrade_0021_postgres.rs  usage_consumer_health_postgres.rs  usage_surface_upgrade_postgres.rs
fuzz/: Cargo.toml
fuzz/corpus/media_metadata/: image-edit.json  image-variation.json  oversized-part.json  transcription.json
fuzz/corpus/multipart_parser/: arbitrary-file-payload  missing-name  truncated-form
fuzz/corpus/protocol_json/: anthropic-message.json  anthropic-response.json  gemini-content.json  gemini-response.json  openai-chat-response.json  openai-chat.json  openai-embedding-request.json  openai-embedding-response.json  openai-image-generation.json  openai-image-response.json  openai-image-stream.json  openai-model-list.json  openai-moderation-request.json  openai-moderation-response.json  openai-responses.json  openai-speech-stream.json  openai-speech.json  openai-transcription-response.json  openai-video-create.json  openai-video-list.json  openai-video-object.json
fuzz/corpus/sse_decoder/: anthropic-unknown.sse  basic-sse  bounded-unterminated.sse  gemini-event.sse  openai-responses.sse  openai-transcription.sse
fuzz/fuzz_targets/: media_metadata.rs  multipart_parser.rs  protocol_json.rs  sse_decoder.rs
tests/conformance/: Cargo.toml
tests/conformance/src/: lib.rs
tests/conformance/tests/: corpus.rs  protocols.rs  routing_retry.rs  selected_operations.rs  ssrf.rs  streaming.rs
(+800 files in other folders)
