[package]
name = "olp-conformance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
olp-domain.workspace = true
olp-protocols.workspace = true
olp-providers = { workspace = true, features = ["test-util"] }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
